Implement Auth (UC-001), Startup Profile (UC-002), and Security fixes